--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -12,7 +12,7 @@
     <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
     <h2 class="introduction__heading astro-HR23OLMI">
         <span class="ttl_line">トスカーナ州で作られた<br class="sp">バケッタ製法の古典</span></h2>
-    <p class="introduction__text astro-HR23OLMI">ピㇼカマブイで主に扱っている革は、イタリアのトスカーナ州ポンテ・ア・エゴラ地区にあるVirgilio Conceria Artigiana社が製造する、表面のスクラッチ加工が特徴のショルダー革です。<br class="u-pc-only"><br class="pc"><br class="sp">化学薬品を一切使用せず、植物性タンニンで時間をかけてじっくりと丁寧に鞣しています。<br class="sp"><br class="sp">表面の起毛は和紙のような独特の風合いでザラザラした肌触りから、使用していくにつれ内側からのオイルが馴染み、3カ月程度で起毛部分が寝て表面はツルツルになり、その後は美しいツヤ肌になっていきます。<br class="pc"><br class="pc"><br class="sp"><br class="sp">経年変化による革を育てる楽しみが味わえる、高級素材のひとつです。</p>
+    <p class="introduction__text astro-HR23OLMI">イタリアのトスカーナ州ポンテ・ア・エゴラ地区にあるVirgilio Conceria Artigiana社が製造する、表面のスクラッチ加工が特徴のショルダー革を使用しています。<br class="u-pc-only"><br class="pc"><br class="sp">化学薬品を一切使用せず、植物性タンニンで時間をかけてじっくりと丁寧に鞣しています。<br class="sp"><br class="sp">表面の起毛は和紙のような独特の風合いでザラザラした肌触りから、使用していくにつれ内側からのオイルが馴染み、3カ月程度で起毛部分が寝て表面はツルツルになり、その後は美しいツヤ肌になっていきます。<br class="pc"><br class="pc"><br class="sp"><br class="sp">経年変化による革を育てる楽しみが味わえる、高級素材のひとつです。</p>
       <div class="about__button" data-astro-cid-j7pv25f6="">
         <a href="/aboutleather" class="button center" data-astro-cid-vnzlvqnm="">詳細をみる
            <svg viewBox="0 0 24 24" data-astro-cid-vnzlvqnm="" class="button__icon" astro-icon="majesticons:arrow-up-line">
@@ -48,7 +48,7 @@
       <div class="introduction__container astro-HR23OLMI">
         <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
         <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">400年以上の伝統と音の贅沢</span></h2>
-        <p class="introduction__text astro-HR23OLMI">ドイツの老舗金具メーカー「PRYM&thinsp;(プリム)&thinsp;」同社は他のメーカーとは比べ物にならないほどの長い歴史があり、その歴史は400年以上を誇ります。<br class="sp"><br class="pc"><br class="sp"><br class="pc">金具は少し硬めで、「カチッ」とした高い音が開閉時に聞けることでしょう。<br class="sp"><br class="sp">知る人ぞ知るあの「ドイツホック」を製造していたりと、レザーファンにはたまらない金具を提供し続けてくれているメーカーです。</p>
+        <p class="introduction__text astro-HR23OLMI">ドイツの老舗金具メーカー「PRYM&thinsp;(プリム)&thinsp;」同社は他のメーカーとは比べ物にならないほどの長い歴史があり、その歴史は400年以上を誇ります。<br class="sp"><br class="pc"><br class="sp"><br class="pc">金具は少し硬めで、「カチッ」とした高い音が開閉時に聞けることでしょう。<br class="sp"><br class="sp">知る人ぞ知る「ドイツホック」を製造していたりと、レザーファンにはたまらない金具を提供し続けてくれているメーカーです。</p>
         </div>
         
         <figure class="introduction__map astro-HR23OLMI">
@@ -64,7 +64,7 @@
         <div class="introduction__container astro-HR23OLMI">
           <div class="introduction__content astro-HR23OLMI is-inview" data-scroll="">
           <h2 class="introduction__heading astro-HR23OLMI"><span class="ttl_line">廃業した老舗の逸品</span></h2>
-          <p class="introduction__text astro-HR23OLMI">1945年創業のスイス発の老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp">パーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="sp"><br class="sp"><br class="pc"><br class="pc"><span class="stripe-marker">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。</span>
+          <p class="introduction__text astro-HR23OLMI">1945年創業のスイス発の老舗金具メーカー、アミエット社のキーホルダーを使用しています。<br class="sp"><br class="sp">パーツにはSWISS MADEの刻印がなされ、最高品質の素材が使われた、剛健で美しい金具です。<br class="sp"><br class="sp"><br class="pc"><br class="pc"><span class="stripe-marker">※アミエット社は2021年に廃業しており、現在ストックで製作を行っているため、数量限定となっております。</span>
           </p>
           </div>
           
@@ -287,7 +287,8 @@ img.cover {
 
 @media screen and (max-width: 767px) {
     ._button__text_1jidj_200 {
-        font-size:14px;
+         font-size: 0.9rem;
+;
     }
 }
 
@@ -323,18 +324,6 @@ img.cover {
         padding:0 16px;
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -382,7 +371,7 @@ img.cover {
 
 .summary-box.column h1 {
   margin-top: 100px;
-    font-size: 1.7rem;
+    font-size: 1.95rem;
     line-height: 2.0;
 
     font-family: 'Shippori Mincho', serif;
@@ -414,7 +403,7 @@ img.cover {
    
    .introduction__content {
        padding: 6.125rem 0 6.125rem 9.5168374817%;
-       max-width: 47.364568082%;
+       max-width: 48.364568082%;
    }
    
    
@@ -445,7 +434,7 @@ img.cover {
        line-height: 2.3076923077;
        margin-top: 3.125rem;
        transition: .6s 1s;
-       font-size: 0.9375rem;
+       font-size: 0.9575rem;
        letter-spacing: .05em;
 
 
@@ -522,7 +511,7 @@ img.cover {
   .introduction__text {
     margin-top: 1.25rem; /* Add space between image and text */
     text-align: left; /* Center text */
-    font-size: 0.95rem;
+    font-size: 0.975rem;
     padding-top: 30px;
   }
 
