--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -35,7 +35,7 @@
               <p>&nbsp;</p>
 
               <p><img src="/kenne.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
-              <p>写真左&thinsp;:&thinsp;約1年半ほど使用 【&thinsp;革色 グレー&thinsp;】<br class="pc"><br class="sp">写真右&thinsp;:&thinsp;新品のキーケース【&thinsp;革色 グレー&thinsp;】<br class="pc"><br class="pc"><br class="sp"><br class="sp">実際のエイジングサンプルと新品の比較です。<br class="sp"><br class="sp"><br class="pc">全体的に表面のスクラッチが落ち着き、自然な艶ががかった色合いに変化しています。</p>
+              <p><span class="stripe-marker">実際のエイジングサンプルと新品の比較です。</span><br class="sp"><br class="pc">写真左&thinsp;:&thinsp;約1年半ほど使用 【&thinsp;革色 グレー&thinsp;】  <br class="sp">写真右&thinsp;:&thinsp;新品のキーケース【&thinsp;革色 グレー&thinsp;】<br class="sp"><br class="sp"><br class="pc"><br class="pc">全体的に表面のスクラッチが落ち着き、自然な艶ががかった色合いに変化しています。</p>
 
                 <h1 class="ttl_1"><span class="line">霞がかったような白いワックス</span></h1>
               <p>&nbsp;</p>
@@ -254,7 +254,7 @@
 }
 .newsEditor p {
   line-height: 2;
-  font-size: 0.92rem;
+  font-size: 0.9575rem;
   font-family: 'Shippori Mincho', sans-serif;
 
 }
@@ -333,13 +333,12 @@
   .newsEditor {
     width: auto;
     margin: 60px 20px 0;
-    font-size: 0.95rem;
+    font-size: 0.975rem;
 
   }
 
   .newsEditor[data-astro-cid-ekziid7k] p[data-astro-cid-ekziid7k]{
-    font-size: 0.95rem;
-
+    font-size: 0.975rem;
     font-family: "Shippori Mincho B1",serif;
     line-height: 2.3076923077;
     letter-spacing: .05em;
@@ -355,7 +354,7 @@ p{
     line-height: 2.3076923077;
     margin-top: 3.125rem;
     transition: .6s 1s;
-    font-size: 0.9rem;
+    font-size: 0.9575rem;
     letter-spacing: .05em;
 }
 
@@ -369,30 +368,10 @@ p{
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 * {
     padding: 0;
     margin: 0;
 }
-
-
-
-
 
 
 *,:before,:after {
