--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -74,7 +74,7 @@
         <img src="/leatherhosii-min.webp" alt="当店の画像について" >
       </div>
       <h3 class="c-bannerList_title">ABOUT SHOP</h3>
-      <p class="c-bannerList_text">当店の厳選した上質な素材、こだわりについて紹介しています。<br><center><span style="color: #999999;">画像引用:https://virgilioconceriaartigiana.it</span> </center></p>
+      <p class="c-bannerList_text">当店の厳選した上質な素材、こだわりについて紹介しています。<br><center><span style="color: #999999;">引用:https://virgilioconceriaartigiana.it</span> </center></p>
     </a>
   </li>
 </ul>
@@ -594,7 +594,7 @@
       .c-bannerList_text {
         line-height: 2;
         margin: 20px 0 0px;
-        font-size: 0.94rem;
+        font-size: 1rem;
         font-family: "Shippori Mincho",sans-serif;
       
       }
@@ -1139,7 +1139,7 @@
          
          .introduction__content{
              padding: 8.125rem 0 8.125rem 9.5168374817%;
-             max-width: 47.364568082%;
+             max-width: 48.364568082%;
          }
          
          
@@ -1171,7 +1171,7 @@
              line-height: 2.3076923077;
              margin-top: 3.125rem;
              transition: .6s 1s;
-             font-size: 0.9375rem;
+             font-size: 1rem;
              letter-spacing: .05em;
       
       
@@ -1253,7 +1253,6 @@
              text-rendering: optimizeLegibility;
              height: 100%;
              letter-spacing: .05em;
-             font-size: .8125rem;
              line-height: 1.6923076923;
              color: #333;
       
