--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -594,7 +594,7 @@
       .c-bannerList_text {
         line-height: 2;
         margin: 20px 0 0px;
-        font-size: 1rem;
+        font-size: .9575rem;
         font-family: "Shippori Mincho",sans-serif;
       
       }
