--- a/src/components/HomeEn.astro
+++ b/src/components/HomeEn.astro
@@ -52,7 +52,7 @@
   <li class="c-bannerList_node">
     <a href="/productlistEn">
       <div class="c-bannerList_img">
-        <img src="/afheaufhhf.webp" alt="当店の商品画像" >
+        <img src="/colee.webp" alt="当店の商品画像" >
       </div>
 <h3 class="c-bannerList_title">COLLECTIONS</h3>
       <p class="c-bannerList_text">In addition to bag products, we actively handle small accessories such as wallets and key cases.</p>
