--- a/src/components/Pattern.astro
+++ b/src/components/Pattern.astro
@@ -35,7 +35,7 @@
         </dl>
         <dl>
         <dt>STEP - 2 <br class="sp">皮革</dt>
-        <dd>下記の中から2種類までお好みの皮革を選択して頂きます。<br class="sp"><br class="pc"><br class="sp">【スクラッチ】&thinsp;８色<br class="pc"><br class="sp">【ホワイトワックス】&thinsp;12色<br class="pc"><br class="sp"><span class="stripe-marker">※外装のみの使用となります。</span><br class="pc"><br class="sp"><a href="https://pircamabui.com/aboutleather/" class="animate-link">詳細はこちらから </a>
+        <dd>下記の中から2種類までお好みの皮革を選択して頂きます。<br class="sp"><br class="pc"><br class="sp">【スクラッチ】&thinsp;6色<br class="pc"><br class="sp">【ホワイトワックス】&thinsp;12色<br class="pc"><br class="sp"><span class="stripe-marker">※外装のみの使用となります。</span><br class="pc"><br class="sp"><a href="https://pircamabui.com/aboutleather/" class="animate-link">詳細はこちらから </a>
         </dd>
         </dl>
         <dl>
@@ -49,11 +49,11 @@
 
         <dl>
           <dt>STEP - 6 <br class="sp">ロゴ・刻印</dt>
-          <dd>	ロゴの有無、、刻印する文字をお選びいただきます。<br class="pc"><br class="sp"><span class="stripe-marker">※大小文字含め６文字まで</span></dd>
+          <dd>	ロゴの有無、、刻印する文字をお選びいただきます。<br class="pc"><br class="sp"><span class="stripe-marker">※大小文字含め7文字まで</span></dd>
           </dl>
         <dl>
         <dt>お引き渡し・ご配達</dt>
-        <dd>仕入れにかかる日数を加え、発送まで４週間程度お時間を頂いております。<br class="pc"><br class="sp"><a href="https://pircamabui.com/leagal/" class="animate-link">詳細はこちらから </a></dd>
+        <dd>仕入れにかかる日数を加え、発送まで３、４週間程度お時間を頂いております。<br class="pc"><br class="sp"><a href="https://pircamabui.com/leagal/" class="animate-link">詳細はこちらから </a></dd>
         </dl>
       </div><!-- /.table -->
     </div>
