--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -114,6 +114,24 @@
     </div>
   </a>
 </li>
+
+<li class="newsList_node c-newsList_node">
+  <a href="/note">
+    <div class="c-newsList_columnLeft">
+      <div class="newsList_info c-newsList_info">
+        <div class="newsList_category c-newsList_category">
+          STATIONERY             </div>
+        <time class="newsList_date c-newsList_date">
+                     </time>
+      </div>
+      <h3 class="newsList_title c-newsList_title">
+        RHODIA カバー           </h3>
+    </div>
+    <div class="newsList_img c-newsList_img">
+      <img src="/note1.webp">
+    </div>
+  </a>
+</li>
     <li class="newsList_node c-newsList_node">
   <a href="/minimam">
     <div class="c-newsList_columnLeft">
@@ -131,24 +149,44 @@
     </div>
   </a>
 </li>
-    <li class="newsList_node c-newsList_node">
+
+
+<li class="newsList_node c-newsList_node">
   <a href="/">
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
-          MIDDLEWALLET             </div>
+       WALLET             </div>
         <time class="newsList_date c-newsList_date">
                      </time>
       </div>
       <h3 class="newsList_title c-newsList_title">
-        ミドルウォレット            </h3>
+        二つ折り財布           </h3>
+    </div>
+    <div class="newsList_img c-newsList_img">
+      <img src="/wallt.webp">
+    </div>
+  </a>
+</li>
+
+
+<li class="newsList_node c-newsList_node">
+  <a href="/">
+    <div class="c-newsList_columnLeft">
+      <div class="newsList_info c-newsList_info">
+        <div class="newsList_category c-newsList_category">
+          STATIONERY             </div>
+        <time class="newsList_date c-newsList_date">
+                     </time>
+      </div>
+      <h3 class="newsList_title c-newsList_title">
+        RHODIA カバー           </h3>
     </div>
     <div class="newsList_img c-newsList_img">
       <img src="/coming.webp">
     </div>
   </a>
 </li>
-
 
 
    
