--- a/src/components/Smallwallet.astro
+++ b/src/components/Smallwallet.astro
@@ -58,7 +58,7 @@
                 <a href="/smartkey" class="c-singlePager_arrow-prev">
                 <span>Back</span>
               </a>
-                  <a href="/minimam" class="c-singlePager_arrow-next">
+                  <a href="/note" class="c-singlePager_arrow-next">
                 <span>Next</span>
               </a>
             </div>
