--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -53,7 +53,7 @@
   <li class="c-bannerList_node">
     <a href="/productlist">
       <div class="c-bannerList_img">
-        <img src="/afheaufhhf.webp" alt="当店の商品画像" >
+        <img src="/colee.webp" alt="当店の商品画像" >
       </div>
 <h3 class="c-bannerList_title">COLLECTIONS</h3>
       <p class="c-bannerList_text">鞄製品に加え、小物財布、キーケースなど積極的に取り扱っております。</p>
