--- a/src/components/Note.astro
+++ b/src/components/Note.astro
@@ -31,10 +31,10 @@
                 <p>&nbsp;</p>
         
                 <p><img loading="lazy" src="/notr2.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>RHODIAは世界的に有名なフランス製のメモパッドです。プロフェッショナルユースに耐える機能性と優れたデザイン性は、誕生以来、変わらずに世界中のユーザーを魅了し続けています。</p>
+                <p>RHODIAは世界的に有名なフランス製のメモパッドです。<br class="sp"><br class="sp">プロフェッショナルユースに耐える機能性と優れたデザイン性は、誕生以来、変わらずに世界中のユーザーを魅了し続けています。</p>
                 <p>&nbsp;</p>
                 <p><img loading="lazy" src="/note6.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
-                <p>滑らかで反射のない用紙に加えて、一枚ずつ切り離しが可能なため、用途に合わせてお使い頂けます。<br class="pc"><br class="pc"><br class="sp"><br class="sp">ロディアNo.11が商品に付属しているため、2種類の中から1つご選択が可能です。<br class="pc"><br class="sp">写真左&thinsp;:&thinsp;【&thinsp;ラインタイプ &thinsp;】<br class="pc"><br class="sp">写真右&thinsp;:&thinsp;5mm方眼【&thinsp;ブロックタイプ&thinsp;】</p>
+                <p>滑らかで反射のない用紙に加えて、一枚ずつ切り離しが可能なため、用途に合わせてお使い頂けます。<br class="pc"><br class="pc"><br class="sp"><br class="sp">ロディアNo.11が商品に付属しているため、2種類の中から1つご選択が可能です。<br class="pc"><br class="sp">写真左&thinsp;:&thinsp;7mm横罫【&thinsp;ラインタイプ &thinsp;】<br class="pc"><br class="sp">写真右&thinsp;:&thinsp;5mm方眼【&thinsp;ブロックタイプ&thinsp;】</p>
                 <p>&nbsp;</p>
                 <p><img loading="lazy" src="/note4.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>外装にはつなぎ目がない一枚革を使用したことで、長く使用できることに加えて皮革そのものの風合いの変化もお楽しみ頂けるアイテムです。<br class="pc"><br class="pc"><br class="sp"><br class="sp">使用する際には、上部の隙間に差し込むことで写真のように固定したままお使い頂けます。<br class="sp"><br class="sp">ペンホルダーは、付属せずにデザイン性、利便性を高めた設計にしています。</p>
