--- a/src/components/Leather.astro
+++ b/src/components/Leather.astro
@@ -35,9 +35,12 @@
               <p>&nbsp;</p>
 
               <p><img src="/kenne.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
-              <p><span class="stripe-marker">実際のエイジングサンプルと新品の比較です。</span><br class="sp"><br class="pc">写真左&thinsp;:&thinsp;約1年半ほど使用 【&thinsp;革色 グレー&thinsp;】  <br class="sp">写真右&thinsp;:&thinsp;新品のキーケース【&thinsp;革色 グレー&thinsp;】<br class="sp"><br class="sp"><br class="pc"><br class="pc">全体的に表面のスクラッチが落ち着き、自然な艶ががかった色合いに変化しています。</p>
-
-                <h1 class="ttl_1"><span class="line">霞がかったような白いワックス</span></h1>
+              <p><span class="stripe-marker">実際のエイジングサンプルと新品の比較です。</span><br class="sp"><br class="pc">写真左&thinsp;:&thinsp;約1年半ほど使用 【&thinsp;革色グレー&thinsp;】&thinsp;<br class="sp">写真右&thinsp;:&thinsp;新品のキーケース【&thinsp;革色グレー&thinsp;】</p>
+              <p>&nbsp;</p>
+              <p><img src="/sanmpee.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
+              <p><span class="stripe-marker">実際のエイジングサンプルと新品の比較です。</span><br class="sp"><br class="pc">写真左&thinsp;:&thinsp;約3年ほど使用 【&thinsp;革色ブラウン&thinsp;】&thinsp;<br class="sp">写真右&thinsp;:&thinsp;【&thinsp;革色ブラウン&thinsp;】<br class="sp"><br class="pc"><br class="sp"><br class="pc">全体的に表面のスクラッチが落ち着き、自然な艶ががかった色合いに変化しています。</p>
+              
+              <h1 class="ttl_1"><span class="line">霞がかったような白いワックス</span></h1>
               <p>&nbsp;</p>
 
               <p><img src="/samplekawa.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20003"></p>
