--- a/src/components/Note.astro
+++ b/src/components/Note.astro
@@ -21,7 +21,7 @@
                     </div>
                   </div>
                   <div class="newsVisual">
-                    <img src="/note1.webp">
+                    <img src="/notekore.webp">
                   </div>
                 </div>
                 
