--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -128,7 +128,7 @@
         RHODIA カバー           </h3>
     </div>
     <div class="newsList_img c-newsList_img">
-      <img src="/note1.webp">
+      <img src="/notekore.webp">
     </div>
   </a>
 </li>
