--- a/src/components/Pa1.astro
+++ b/src/components/Pa1.astro
@@ -1,37 +1,35 @@
-
-<div class="slider-container">
-    <div class="slider">
-      <div class="slides">
-        <div id="slides__1" class="slide" >
-          <img loading="lazy" src="/keycaseBb.webp" height="450px" alt="" >
-          <span class="slide__text" > 1</span>
-          <a class="slide__prev" href="#slides__4" title="Next"></a>
-          <a class="slide__next" href="#slides__2" title="Next"></a>
+<div class="container">
+    <div class="slider-container">
+        <div class="slider">
+            <div class="slides">
+                <div id="slides__1" class="slide">
+                    <img loading="lazy" src="/patternkey.webp" class="slide__img" alt="パターン">
+                    <a class="slide__prev" href="#slides__4" title="Next"></a>
+                    <a class="slide__next" href="#slides__2" title="Next"></a>
+                </div>
+                <div id="slides__2" class="slide">
+                    <img loading="lazy" src="/color1.webp" class="slide__img" alt="皮サンプル">
+                    <a class="slide__prev" href="#slides__1" title="Prev"></a>
+                    <a class="slide__next" href="#slides__3" title="Next"></a>
+                </div>
+                <div id="slides__3" class="slide">
+                    <img loading="lazy" src="/color2.webp" class="slide__img" alt=皮サンプル２"">
+                    <a class="slide__prev" href="#slides__2" title="Prev"></a>
+                    <a class="slide__next" href="#slides__4" title="Next"></a>
+                </div>
+                <div id="slides__4" class="slide">
+                    <a class="slide__prev" href="#slides__3" title="Prev"></a>
+                    <a class="slide__next" href="#slides__1" title="Prev"></a>
+                </div>
+            </div>
+            <div class="slider__nav">
+                <a class="slider__navlink" href="#slides__1"></a>
+                <a class="slider__navlink" href="#slides__2"></a>
+                <a class="slider__navlink" href="#slides__3"></a>
+                <a class="slider__navlink" href="#slides__4"></a>
+            </div>
         </div>
-        <div id="slides__2" class="slide">
-          <span class="slide__text">2</span>
-          <a class="slide__prev" href="#slides__1" title="Prev"></a>
-          <a class="slide__next" href="#slides__3" title="Next"></a>
-        </div>
-        <div id="slides__3" class="slide">
-          <span class="slide__text">3</span>
-          <a class="slide__prev" href="#slides__2" title="Prev"></a>
-          <a class="slide__next" href="#slides__4" title="Next"></a>
-        </div>
-        <div id="slides__4" class="slide">
-          <span class="slide__text">4</span>
-          <a class="slide__prev" href="#slides__3" title="Prev"></a>
-          <a class="slide__next" href="#slides__1" title="Prev"></a>
-        </div>
-      </div>
-      <div class="slider__nav">
-          <a class="slider__navlink" href="#slides__1"></a>
-          <a class="slider__navlink" href="#slides__2"></a>
-          <a class="slider__navlink" href="#slides__3"></a>
-          <a class="slider__navlink" href="#slides__4"></a>
-      </div>
     </div>
-
     <div class="description-container">
         <h2>商品説明</h2>
         <p>
@@ -41,22 +39,181 @@
             詳細情報や追加の説明を含めることもできます。お客様に商品について理解していただけるように、できるだけ詳しく記載してください。
         </p>
     </div>
-  </div>
+</div>
+
+<div id="contact" class="con">
+    <h1 class="Home_Contact_Title__KdAFZ">お問い合わせ</h1>
+    <main class="Layout_Main__dLHqI">
+        <div class="Home_Contact__nbvJ6">
+            <p class="Home_Contact_Text__3D7zy">お問い合わせは以下のフォームよりお送りください。<span class="kome">※</span>は必須項目です</p>
+            <form method="post" action="https://contact-web.form.newt.so/v1/MOsh6xKM5">
+                <div style="display: none;"><input type="text" name="wana" /></div>
+                <label class="Home_Contact_Label__hwNpu" for="name">*氏名</label>
+                <input class="Home_Contact_InputText__vKPd7" id="name" required="required" name="name"  placeholder="本名をご記入ください">
+                <label class="Home_Contact_Label__hwNpu" for="email">*メールアドレス</label>
+                <input class="Home_Contact_InputText__vKPd7" id="email" type="email" required="required" name="email" placeholder="info@example.com">
+               
+                <label class="Home_Contact_Label__hwNpu" for="subject">*外装</label>
+                <select name="subject" class="form-control" required>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ダークブラウン">ダークブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グレー">グレー</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="ピンク">ピンク</option>
+                </select>
+             
+                <label class="Home_Contact_Label__hwNpu" for="subject">*内装</label>
+                <select name="subject" class="form-control" required>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ダークブラウン">ダークブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グレー">グレー</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="ピンク">ピンク</option>
+                </select>
+            
+                <label class="Home_Contact_Label__hwNpu" for="subject">*左ポケット</label>
+                <select name="subject" class="form-control" required>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ダークブラウン">ダークブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グレー">グレー</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="ピンク">ピンク</option>
+                </select>
+             
+                <label class="Home_Contact_Label__hwNpu" for="subject">*右ポケット</label>
+                <select name="subject" class="form-control" required>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ダークブラウン">ダークブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グレー">グレー</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="ピンク">ピンク</option>
+                </select>
+            
+                <label class="Home_Contact_Label__hwNpu" for="subject">取っ手</label>
+                <select name="subject" class="form-control" required>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ダークブラウン">ダークブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グレー">グレー</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="ピンク">ピンク</option>
+                </select>
+           
+               
+             
+                <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
+            </form>
+        </div>
+    </main>
+        </div>
 
 
 
-
+        <script
+        is:inline
+        src="https://www.google.com/recaptcha/api.js?render=6LcuhAMiAAAAAAARmCpKoIg_rEO-iK-Uk_coKvXo&hl=ja"
+      ></script>
+      
+      <script>
+        const form = document.getElementById('form')
+        form?.addEventListener('submit', submitFormData)
+      
+        function submitFormData(event: Event) {
+          event.preventDefault()
+          grecaptcha.ready(() => {
+            grecaptcha
+              .execute('6LcuhAMiAAAAAAARmCpKoIg_rEO-iK-Uk_coKvXo', { action: 'submit' })
+              .then(async (token) => {
+                const target = event.target as typeof event.target & {
+                  name: { value: string }
+                  email: { value: string }
+                  message: { value: string }
+                }
+      
+                const data = {
+                  name: target.name.value,
+                  email: target.email.value,
+                  message: target.message.value,
+                  googleReCaptchaToken: token,
+                }
+      
+                const formData = new FormData()
+                Object.entries(data).forEach(([key, value]) => {
+                  formData.append(key, value)
+                })
+      
+                await sendRequest(formData)
+              })
+          })
+        }
+      
+        async function sendRequest(formData: FormData) {
+          return await fetch('https://ssgform.com/s/NHTGZqRshncp', {
+            method: 'POST',
+            body: formData,
+            headers: {
+              Accept: 'application/json',
+            },
+          })
+        }
+      </script>
+      
 
 <style>
 
 
-.description-container {
-            flex: 1;
-            padding: 20px;
-            background: #f9f9f9;
-            border-radius: 10px;
-        }
+select{
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 0.9rem;
+    margin: 0 0 24px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+
+h1 {
+        font-size: inherit;
+        font-weight: inherit;
+        margin: 0
+    }
+    
+
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Shippori Mincho', sans-serif;
+
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    max-width: 1200px;
+    margin: 40px auto;
+    margin-top: 100px;
+}
+
 .slider-container {
+    flex: 1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -66,18 +223,21 @@
 .slider {
     width: 100%;
     max-width: 600px;
-    height: 450px;
+    height: auto;
     text-align: center;
     overflow: hidden;
     position: relative;
 }
+
 .slides {
     display: flex;
     overflow-x: scroll;
     position: relative;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
+    -webkit-overflow-scrolling: touch; /* iOSデバイスでの滑らかなスクロール */
 }
+
 .slide:nth-of-type(even) {
     background-color: rgb(250, 246, 212);
 }
@@ -88,8 +248,8 @@
     align-items: center;
     flex-shrink: 0;
     width: 100%;
-    height: 450px;
-    margin-right: 0px;
+    height: auto;
+    margin-right: 0;
     box-sizing: border-box;
     background: white;
     transform-origin: center center;
@@ -97,10 +257,9 @@
     scroll-snap-align: center;
 }
 
-.slide__text {
-    font-size: 40px;
-    font-weight: bold;
-    font-family: sans-serif;
+.slide__img {
+    width: 100%;
+    height: auto;
 }
 
 .slide a {
@@ -109,39 +268,27 @@
 }
 
 a.slide__prev,
-.slider::before {
-    transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
-    left: 5%;
-}
-
-a.slide__next,
-.slider::after {
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-    right: 5%;
-}
-
-.slider::before,
-.slider::after,
-.slide__prev,
-.slide__next {
+a.slide__next {
     position: absolute;
-    top: 48%;
-    width: 35px;
-    height: 35px;
-    border: solid black;
+    top: 50%;
+    width: 20px;
+    height: 20px;
+    border: solid #eee;
     border-width: 0 4px 4px 0;
     padding: 3px;
     box-sizing: border-box;
 }
 
-.slider::before,
-.slider::after {
-  content: '';
-  z-index: 1;
-  background: none;
-  pointer-events: none;
+.slide__prev {
+    left: 5%;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+}
+
+.slide__next {
+    right: 5%;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
 }
 
 .slider__nav {
@@ -156,11 +303,55 @@ a.slide__next,
 
 .slider__navlink {
     display: inline-block;
-    height: 15px;
-    width: 15px;
+    height: 10px;
+    width: 10px;
     border-radius: 50%;
-    background-color: black;
-    margin: 0 10px 0 10px;
+    background-color: #eee;
+    margin: 0 10px;
+}
+
+.description-container {
+    flex: 1;
+    padding: 20px;
+    background: #f9f9f9;
+    border-radius: 10px;
+}
+
+@media print, screen and (max-width: 767px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .slider-container {
+        margin-bottom: 20px;
+        width: 100%;
+    }
+
+    .slider {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .slide {
+        height: auto;
+    }
+
+    .description-container {
+        width: 100%;
+        padding: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .slider__navlink {
+        height: 10px;
+        width: 10px;
+    }
+
+    .slide__text {
+        font-size: 30px;
+    }
 }
 
 
@@ -169,6 +360,17 @@ a.slide__next,
 
 
 
+
+.kome{
+    color: #00896C;
+
+}
+
+
+* {
+    padding: 0;
+    margin: 0;
+}
 
 
 
@@ -262,11 +464,5 @@ a.slide__next,
     width: 100%;
     font-size: 1.1rem;
 }
-
-
-
-
-
-
 
 </style>
