--- a/src/components/Leagal.astro
+++ b/src/components/Leagal.astro
@@ -48,7 +48,8 @@
     <p class="c-pageSection_text">
       ・クレジットカード (VISA / Mastercard / JCB / American Express / Diners Club )<br>
       ・コンビニ決済 (ファミリーマート / ローソン / ミニストップ / デイリーヤマザキ / セイコーマート)<br>
-      ・あと払い（ペイディ）<br>
+      ・d払い<br>
+      ・ソフトバンクまとめて支払い<br>
       ・銀行振込<br>
       ・paypal<br>
       ・キャリア決済 (d払い / auかんたん決済 / ソフトバンクまとめて支払い)<br>
