--- a/src/components/Pattern.astro
+++ b/src/components/Pattern.astro
@@ -49,7 +49,7 @@
 
         <dl>
           <dt>STEP - 6 <br class="sp">ロゴ・刻印</dt>
-          <dd>	ロゴの有無、、刻印する文字をお選びいただきます。<br class="pc"><br class="sp"><span class="stripe-marker">※大小文字含め7文字まで</span></dd>
+          <dd>	ロゴの有無、、イニシャル刻印の有無をお選びいただきます。<br class="pc"><br class="sp"><span class="stripe-marker">※イニシャル刻印:大小文字含め12文字まで</span></dd>
           </dl>
         <dl>
         <dt>お引き渡し・ご配達</dt>
