--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -64,7 +64,7 @@
   }
 
   async function sendRequest(formData: FormData) {
-    return await fetch('https://ssgform.com/s/NHTGZqRshncp', {
+    return await fetch('https://contact-web.form.newt.so/v1/cASqqzwCC', {
       method: 'POST',
       body: formData,
       headers: {
