--- a/src/components/Pa2.astro
+++ b/src/components/Pa2.astro
@@ -3,8 +3,8 @@
         <div class="slider">
             <div class="slides">
                 <div id="slides__1" class="slide">
-                    <img loading="lazy" src="/patternkey.webp" class="slide__img" alt="パターン">
-                   
+                    <img loading="lazy" src="/koreree.webp" class="slide__img" alt="パターン">
+            
                 </div>
                 <div id="slides__2" class="slide">
                     <img loading="lazy" src="/color1.webp" class="slide__img" alt="皮サンプル">
@@ -15,7 +15,8 @@
                   
                 </div>
                 <div id="slides__4" class="slide">
-                 
+                    <img loading="lazy" src="/color2.webp" class="slide__img" alt=皮サンプル２"">
+
                 </div>
             </div>
             <div class="slider__nav">
@@ -44,7 +45,7 @@
     <main class="Layout_Main__dLHqI">
         <div class="Home_Contact__nbvJ6">
             <p class="Home_Contact_Text__3D7zy">パターンオーダーは以下のフォームよりお送りください。<br>送信後、決算ページに移行します。<span class="stripe-marker">カート名：パターンオーダーをご選択します。</span>  <br class="sp"><br class="pc"><span class="kome">※</span>は必須項目です</p>
-            <form method="post" action="https://contact-web.form.newt.so/v1/MOsh6xKM5">
+            <form method="post" action="https://contact-web.form.newt.so/v1/3Q7_1A1m3">
                 <div style="display: none;"><input type="text" name="wana" /></div>
                 <label class="Home_Contact_Label__hwNpu" for="name">*氏名</label>
                 <input class="Home_Contact_InputText__vKPd7" id="name" required="required" name="name" placeholder="本名をご記入ください">
@@ -90,8 +91,8 @@
                     <option value="ピンク">ピンク</option>
                 </select>
             
-                <label class="Home_Contact_Label__hwNpu" for="left_pocket">*左ポケット</label>
-                <select name="left_pocket" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="left_pocket">*ポケット1</label>
+                <select name="pocket1" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -103,8 +104,34 @@
                     <option value="ピンク">ピンク</option>
                 </select>
              
-                <label class="Home_Contact_Label__hwNpu" for="right_pocket">*右ポケット</label>
-                <select name="right_pocket" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="right_pocket">*ポケット2</label>
+                <select name="pocket2" class="form-control" required="required">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ダークブラウン">ダークブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グレー">グレー</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="ピンク">ピンク</option>
+                </select>
+
+                <label class="Home_Contact_Label__hwNpu" for="mati">*マチ</label>
+                <select name="mati" class="form-control" required="required">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ダークブラウン">ダークブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グレー">グレー</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="ピンク">ピンク</option>
+                </select>
+
+                <label class="Home_Contact_Label__hwNpu" for="coinpockt">*小銭ポケット</label>
+                <select name="coinpockt" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -155,24 +182,17 @@
                     <option value="ピンク">ピンク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kanagu">*金具（キーフック）</label>
-                <select name="kanagu" class="form-control" required="required">
-                    <option value="" disabled selected>選択してください</option>
-                    <option value="ゴールド">ゴールド</option>
-                    <option value="シルバー">シルバー</option>
-                    <option value="アンティーク">アンティーク</option>
-                </select>
-
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様</label>
                 <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り</option>
+                    <option value="有り">有り（配置ポケット1）</option>
+                    <option value="有り">有り（配置ポケット2）</option>
                     <option value="無し">無し</option>
                 
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu" for="name">イニシャル刻印</label>
-                <input class="Home_Contact_InputText__vKPd7" id="name"  placeholder="12文字までをご記入ください">
+                <input class="Home_Contact_InputText__vKPd7" id="name"  placeholder="12文字までをご記入ください、配置はポケット1または2">
            
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
@@ -220,7 +240,7 @@
         }
       
         async function sendRequest(formData: FormData) {
-          return await fetch('https://contact-web.form.newt.so/v1/MOsh6xKM5', {
+          return await fetch('https://contact-web.form.newt.so/v1/3Q7_1A1m3', {
             method: 'POST',
             body: formData,
             headers: {
